# HandWritingDetect

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/example/chen/com/detecthandwriting/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Hello.cpp  Hello.h  example_chen_com_detecthandwriting_CheckActivity.h
app/src/main/java/example/chen/com/detecthandwriting/: CheckActivity.java  MCameraActivity.java  MainActivity.java
app/src/main/java/example/chen/com/detecthandwriting/test/: Test.java
app/src/main/java/example/chen/com/detecthandwriting/util/: DetectUtil.java  DisplayUtil.java  ImageUtil.java  SdCardUtils.java  Test.java  Tf.java
app/src/main/java/example/chen/com/detecthandwriting/view/: CameraSurfaceView.java  CameraTopRectView.java
app/src/main/res/layout/: activity_camera_view.xml  activity_check.xml
app/src/main/res/values/: arrays.xml  strings.xml
app/src/test/java/example/chen/com/detecthandwriting/: ExampleUnitTest.java
openCVLibrary300/: build.gradle
smartcropperlib/: build.gradle
smartcropperlib/src/main/res/values/: arrays.xml
